[gd_scene load_steps=73 format=3 uid="uid://cg1o35hgs01lw"]

[ext_resource type="Script" uid="uid://gesb2njds2yb" path="res://scripts/quiz.gd" id="1_16nxq"]
[ext_resource type="Texture2D" uid="uid://cd6xmhplh6vbr" path="res://assets/sprites/quiz_ui/bg.png" id="1_euwqo"]
[ext_resource type="Texture2D" uid="uid://b7sasdpxq60jh" path="res://assets/sprites/quiz_ui/underground.png" id="2_m81w7"]
[ext_resource type="Texture2D" uid="uid://bmnlu4cs3s2rs" path="res://assets/sprites/knight.png" id="3_w5ac1"]
[ext_resource type="Texture2D" uid="uid://b50qc8shvu6lm" path="res://assets/sprites/quiz_ui/lexicon_grey.png" id="4_ahqvi"]
[ext_resource type="Texture2D" uid="uid://x230edb2cy6o" path="res://assets/sprites/quiz_ui/earth.png" id="5_4qkfh"]
[ext_resource type="Texture2D" uid="uid://78e4mfbsejub" path="res://assets/sprites/quiz_ui/animal_status_bg.png" id="5_xq7j8"]
[ext_resource type="Texture2D" uid="uid://cbrot3y6row5l" path="res://assets/sprites/quiz_ui/dna.png" id="6_5da4r"]
[ext_resource type="Texture2D" uid="uid://b3tofanynydj5" path="res://assets/sprites/quiz_ui/character_status_bg.png" id="6_bn6h1"]
[ext_resource type="PackedScene" uid="uid://brp0jxv2impta" path="res://scenes/animal.tscn" id="7_xcx78"]
[ext_resource type="Texture2D" uid="uid://dv4eld5trmbe0" path="res://assets/sprites/quiz_ui/button_press.png" id="12_ahqvi"]
[ext_resource type="Texture2D" uid="uid://drl0p6euf1bq1" path="res://assets/sprites/quiz_ui/textbox.png" id="12_fpy57"]
[ext_resource type="Texture2D" uid="uid://ce7pdmenrgmem" path="res://assets/sprites/quiz_ui/button_hover.png" id="13_8d1ti"]
[ext_resource type="Texture2D" uid="uid://c4s74f3mx8kra" path="res://assets/sprites/quiz_ui/button.png" id="13_d56me"]
[ext_resource type="Texture2D" uid="uid://de0vqw416ipoh" path="res://assets/sprites/keys/1_key.png" id="15_p88x8"]
[ext_resource type="Texture2D" uid="uid://btsmmqlq3c3d8" path="res://assets/sprites/keys/2_key.png" id="16_xojrb"]
[ext_resource type="Texture2D" uid="uid://dyg7qqa5jg7dq" path="res://assets/sprites/keys/3_key.png" id="17_3up7n"]
[ext_resource type="Texture2D" uid="uid://06h005hdupsg" path="res://assets/sprites/quiz_ui/info_box_bg.png" id="17_24vnv"]
[ext_resource type="Texture2D" uid="uid://coq2njcw4d7mr" path="res://assets/sprites/quiz_ui/info_box_button_press.png" id="17_fiaka"]
[ext_resource type="Texture2D" uid="uid://bs6l4wlyno6be" path="res://assets/sprites/quiz_ui/info_box_button_hover.png" id="18_4l17v"]
[ext_resource type="Texture2D" uid="uid://cgfoncg8rpsfa" path="res://assets/sprites/keys/4_key.png" id="18_en5co"]
[ext_resource type="Texture2D" uid="uid://cpdax7jd1fjql" path="res://assets/sprites/quiz_ui/info_box_banner_left.png" id="18_fpy57"]
[ext_resource type="Texture2D" uid="uid://cffwryg4amrtg" path="res://assets/sprites/quiz_ui/info_box_banner_middle.png" id="19_fiaka"]
[ext_resource type="AudioStream" uid="uid://b45pyfuf0ocdf" path="res://assets/sounds/Sunlight Through Leaves.wav" id="19_wsttk"]
[ext_resource type="Texture2D" uid="uid://cojq1v4iak611" path="res://assets/sprites/quiz_ui/info_box_banner_right.png" id="20_4l17v"]
[ext_resource type="AudioStream" uid="uid://vrap4usofsp0" path="res://assets/sounds/correct_sound_effect.mp3" id="20_fpy57"]
[ext_resource type="AudioStream" uid="uid://dh33pc4tn2hnk" path="res://assets/sounds/wrong_sound_effect.mp3" id="21_fiaka"]
[ext_resource type="AudioStream" uid="uid://c1mlc7dkwqldq" path="res://assets/sounds/congrats_sound.mp3" id="22_fiaka"]
[ext_resource type="Texture2D" uid="uid://dr34f5tvpr4kq" path="res://assets/sprites/keys/enter_key.png" id="25_xojrb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16nxq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcx78"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fpy57"]
load_path = "res://.godot/imported/Idle.png-2f6e0801f0653e9581c5d450f4541e9f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_m81w7"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq7j8"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn6h1"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0h63"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcje5"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_euwqo"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwwmd"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16nxq"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcx78"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp58l"]
atlas = SubResource("CompressedTexture2D_fpy57")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qkfh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m81w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq7j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn6h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0h63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcje5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euwqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwwmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16nxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcx78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp58l")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kp58l"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qkfh"]
bg_color = Color(0.141176, 0.168627, 0.203922, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_5da4r"]
atlas = ExtResource("3_w5ac1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d56me"]
atlas = ExtResource("3_w5ac1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsttk"]
atlas = ExtResource("3_w5ac1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24vnv"]
atlas = ExtResource("3_w5ac1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fpy57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5da4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d56me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsttk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24vnv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0h63"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p88x8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xojrb"]
texture = ExtResource("12_ahqvi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3up7n"]
texture = ExtResource("13_8d1ti")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_en5co"]
texture = ExtResource("12_ahqvi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_euwqo"]
texture = ExtResource("13_d56me")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qvuuc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m0i3k"]
texture = ExtResource("12_ahqvi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cknjh"]
texture = ExtResource("13_8d1ti")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2lncd"]
texture = ExtResource("12_ahqvi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vwwmd"]
texture = ExtResource("13_d56me")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_16nxq"]
texture = ExtResource("13_d56me")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xcx78"]
texture = ExtResource("13_d56me")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24vnv"]
bg_color = Color(0.6, 0.6, 0.6, 0.54902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahqvi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8d1ti"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahqvi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8d1ti"]
texture = ExtResource("17_fiaka")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nyefh"]
texture = ExtResource("18_4l17v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xoaf3"]
texture = ExtResource("17_fiaka")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ahqvi"]
load_path = "res://.godot/imported/info_box_button.png-41b251bf14f3be012fa9619ce9333f49.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d56me"]
texture = SubResource("CompressedTexture2D_ahqvi")

[node name="Quiz" type="Node2D"]
script = ExtResource("1_16nxq")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_euwqo")

[node name="AnimalStatusBar" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_16nxq")

[node name="AnimalStatusBg" type="Sprite2D" parent="AnimalStatusBar"]
position = Vector2(-400, -280)
scale = Vector2(4, 4)
texture = ExtResource("5_xq7j8")

[node name="Lexicon" type="Sprite2D" parent="AnimalStatusBar"]
position = Vector2(-605, -244)
scale = Vector2(2.8, 2.8)
texture = ExtResource("4_ahqvi")

[node name="AnimalName" type="Label" parent="AnimalStatusBar"]
layout_mode = 0
offset_left = -622.0
offset_top = -321.0
offset_right = -227.0
offset_bottom = -279.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Wolf"
autowrap_mode = 2
clip_text = true

[node name="ContinentImage" type="Sprite2D" parent="AnimalStatusBar"]
position = Vector2(-544, -236)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_4qkfh")

[node name="Continent" type="Label" parent="AnimalStatusBar"]
layout_mode = 0
offset_left = -525.0
offset_top = -251.0
offset_right = -393.0
offset_bottom = -223.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Europa"

[node name="SpeciesImage" type="Sprite2D" parent="AnimalStatusBar"]
position = Vector2(-373, -236)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_5da4r")

[node name="Species" type="Label" parent="AnimalStatusBar"]
layout_mode = 0
offset_left = -354.0
offset_top = -251.0
offset_right = -270.0
offset_bottom = -223.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Raubtier"

[node name="Animal" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xcx78")

[node name="AnimalUnderground" type="Sprite2D" parent="Animal"]
position = Vector2(313, -156)
scale = Vector2(4, 4)
texture = ExtResource("2_m81w7")

[node name="AnimalSprite" type="AnimatedSprite2D" parent="Animal"]
visible = false
position = Vector2(333, -223)
scale = Vector2(4.5, 4.5)
sprite_frames = SubResource("SpriteFrames_4qkfh")
autoplay = "default"
frame = 3
frame_progress = 0.88536

[node name="Animal_Test" parent="Animal" instance=ExtResource("7_xcx78")]
position = Vector2(326, -137)
scale = Vector2(5, 5)

[node name="PlayerStatusBar" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kp58l")

[node name="PlayerStatusBg" type="Sprite2D" parent="PlayerStatusBar"]
position = Vector2(400, -50)
scale = Vector2(4, 4)
texture = ExtResource("6_bn6h1")

[node name="PlayerName" type="Label" parent="PlayerStatusBar"]
layout_mode = 0
offset_left = 239.0
offset_top = -91.0
offset_right = 636.0
offset_bottom = -49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Player"
autowrap_mode = 2
clip_text = true

[node name="Player" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4qkfh")

[node name="PlayerUnderground" type="Sprite2D" parent="Player"]
position = Vector2(-313, -40)
scale = Vector2(4, 4)
texture = ExtResource("2_m81w7")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Player"]
position = Vector2(-307, -111)
scale = Vector2(6.2, 6.2)
sprite_frames = SubResource("SpriteFrames_fpy57")
autoplay = "default"
frame = 1
frame_progress = 0.0951945

[node name="QuizBox" type="Panel" parent="."]
offset_left = -640.0
offset_top = 40.0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_t0h63")

[node name="QuestionBg" type="Sprite2D" parent="QuizBox"]
position = Vector2(280, 160)
scale = Vector2(4, 4)
texture = ExtResource("12_fpy57")

[node name="QuestionLabel" type="Label" parent="QuizBox"]
layout_mode = 0
offset_left = 32.0
offset_top = 25.0
offset_right = 528.0
offset_bottom = 295.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="AnswerGrid" type="GridContainer" parent="QuizBox"]
layout_mode = 0
offset_left = 560.0
offset_top = 1.0
offset_right = 1280.0
offset_bottom = 321.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="AnswerButton1" type="Button" parent="QuizBox/AnswerGrid"]
custom_minimum_size = Vector2(360, 160)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_p88x8")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_xojrb")
theme_override_styles/hover = SubResource("StyleBoxTexture_3up7n")
theme_override_styles/pressed = SubResource("StyleBoxTexture_en5co")
theme_override_styles/normal = SubResource("StyleBoxTexture_euwqo")

[node name="AnswerLabel1" type="Label" parent="QuizBox/AnswerGrid/AnswerButton1"]
layout_mode = 0
offset_left = 21.0
offset_top = 19.0
offset_right = 343.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0.968627, 0.968627, 0.968627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Sprite2D" type="Sprite2D" parent="QuizBox/AnswerGrid/AnswerButton1"]
position = Vector2(182, 148)
scale = Vector2(2, 2)
texture = ExtResource("15_p88x8")

[node name="AnswerButton2" type="Button" parent="QuizBox/AnswerGrid"]
custom_minimum_size = Vector2(360, 160)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_qvuuc")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_m0i3k")
theme_override_styles/hover = SubResource("StyleBoxTexture_cknjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2lncd")
theme_override_styles/normal = SubResource("StyleBoxTexture_vwwmd")

[node name="AnswerLabel2" type="Label" parent="QuizBox/AnswerGrid/AnswerButton2"]
layout_mode = 0
offset_left = 17.0
offset_top = 19.0
offset_right = 339.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0.968627, 0.968627, 0.968627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Sprite2D" type="Sprite2D" parent="QuizBox/AnswerGrid/AnswerButton2"]
position = Vector2(178, 148)
scale = Vector2(2, 2)
texture = ExtResource("16_xojrb")

[node name="AnswerButton3" type="Button" parent="QuizBox/AnswerGrid"]
custom_minimum_size = Vector2(360, 160)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_qvuuc")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_m0i3k")
theme_override_styles/hover = SubResource("StyleBoxTexture_cknjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2lncd")
theme_override_styles/normal = SubResource("StyleBoxTexture_16nxq")

[node name="AnswerLabel3" type="Label" parent="QuizBox/AnswerGrid/AnswerButton3"]
layout_mode = 0
offset_left = 21.0
offset_top = 15.0
offset_right = 343.0
offset_bottom = 141.0
theme_override_colors/font_color = Color(0.968627, 0.968627, 0.968627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Sprite2D" type="Sprite2D" parent="QuizBox/AnswerGrid/AnswerButton3"]
position = Vector2(182, 148)
scale = Vector2(2, 2)
texture = ExtResource("17_3up7n")

[node name="AnswerButton4" type="Button" parent="QuizBox/AnswerGrid"]
custom_minimum_size = Vector2(360, 160)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_qvuuc")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_m0i3k")
theme_override_styles/hover = SubResource("StyleBoxTexture_cknjh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2lncd")
theme_override_styles/normal = SubResource("StyleBoxTexture_xcx78")

[node name="AnswerLabel4" type="Label" parent="QuizBox/AnswerGrid/AnswerButton4"]
layout_mode = 0
offset_left = 19.0
offset_top = 17.0
offset_right = 341.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0.968627, 0.968627, 0.968627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="Sprite2D" type="Sprite2D" parent="QuizBox/AnswerGrid/AnswerButton4"]
position = Vector2(180, 148)
scale = Vector2(2, 2)
texture = ExtResource("18_en5co")

[node name="GrayOverlay" type="Panel" parent="."]
visible = false
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_24vnv")

[node name="AnswerFeedback" type="Panel" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ahqvi")

[node name="Background" type="Sprite2D" parent="AnswerFeedback"]
position = Vector2(0, 10)
scale = Vector2(2, 2)
texture = ExtResource("17_24vnv")

[node name="Banner" type="Panel" parent="AnswerFeedback"]
layout_mode = 0
offset_left = -230.0
offset_top = -215.0
offset_right = 230.0
offset_bottom = -55.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8d1ti")

[node name="BannerLeft" type="Sprite2D" parent="AnswerFeedback/Banner"]
position = Vector2(70, 80)
scale = Vector2(5, 5)
texture = ExtResource("18_fpy57")

[node name="BannerMiddle" type="Sprite2D" parent="AnswerFeedback/Banner"]
position = Vector2(230, 75)
scale = Vector2(5, 5)
texture = ExtResource("19_fiaka")

[node name="BannerRight" type="Sprite2D" parent="AnswerFeedback/Banner"]
position = Vector2(390, 80)
scale = Vector2(5, 5)
texture = ExtResource("20_4l17v")

[node name="RightWrongText" type="Label" parent="AnswerFeedback"]
layout_mode = 0
offset_left = -190.0
offset_top = -185.0
offset_right = 190.0
offset_bottom = -100.0
theme_override_colors/font_color = Color(1, 0.94902, 0.823529, 1)
theme_override_font_sizes/font_size = 40
text = "Falsch!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeedbackText" type="Label" parent="AnswerFeedback"]
layout_mode = 0
offset_left = -290.0
offset_top = -55.0
offset_right = 290.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0.427451, 0.294118, 0.152941, 1)
theme_override_font_sizes/font_size = 30
text = "Die richtige Antwort ist: ..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="AnswerFeedbackButton" type="Button" parent="AnswerFeedback"]
layout_mode = 0
offset_left = -122.0
offset_top = 106.0
offset_right = 122.0
offset_bottom = 180.0
theme_override_styles/focus = SubResource("StyleBoxTexture_ahqvi")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_8d1ti")
theme_override_styles/hover = SubResource("StyleBoxTexture_nyefh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xoaf3")
theme_override_styles/normal = SubResource("StyleBoxTexture_d56me")

[node name="Sprite2D" type="Sprite2D" parent="AnswerFeedback/AnswerFeedbackButton"]
position = Vector2(122, 71)
scale = Vector2(2, 2)
texture = ExtResource("25_xojrb")

[node name="AnswerFeedbackButtonText" type="Label" parent="AnswerFeedback"]
layout_mode = 0
offset_left = -110.0
offset_top = 118.0
offset_right = 110.0
offset_bottom = 168.0
theme_override_colors/font_color = Color(1, 0.94902, 0.823529, 1)
theme_override_font_sizes/font_size = 25
text = "Nächste Frage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_wsttk")
autoplay = true

[node name="correct_sound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("20_fpy57")

[node name="wrong_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_fiaka")

[node name="congrats_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_fiaka")

[connection signal="pressed" from="QuizBox/AnswerGrid/AnswerButton1" to="." method="_on_answer_button_1_pressed"]
[connection signal="pressed" from="QuizBox/AnswerGrid/AnswerButton2" to="." method="_on_answer_button_2_pressed"]
[connection signal="pressed" from="QuizBox/AnswerGrid/AnswerButton3" to="." method="_on_answer_button_3_pressed"]
[connection signal="pressed" from="QuizBox/AnswerGrid/AnswerButton4" to="." method="_on_answer_button_4_pressed"]
[connection signal="pressed" from="AnswerFeedback/AnswerFeedbackButton" to="." method="_on_answer_feedback_button_pressed"]
